# mkdocs-test

./: .gitignore  404.html  README  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  publish_version.yml
assets/stylesheets/: extra.css
config/en/: mkdocs.yml
config/ja/: mkdocs.yml
cr/: index.html
cr/01-game-concepts/: index.html
cr/02-object-properties/: index.html
cr/03-zones/: index.html
cr/04-game-structure/: index.html
cr/05-layers-cards-abilities/: index.html
cr/06-effects/: index.html
cr/07-combat/: index.html
cr/08-keywords/: index.html
cr/09-additional-rules/: index.html
cr/acknowledgments/: index.html
cr/glossary/: index.html
cr/preface/: index.html
custom_plugins/: json_export.py
docs/en/: index.md
docs/en/cr/: 01-game-concepts.md  02-object-properties.md  03-zones.md  04-game-structure.md  05-layers-cards-abilities.md  (+8 more)
docs/ja/: 404.md  index.md
docs/stylesheets/: extra.css
en/: 404.html  index.html  sitemap.xml
en/cr/: index.html
en/search/: search_index.json
hooks/: inject_icons.py  json_export.py  markdown_reference_preprocess.py  raw_txt_export.py
ja/: 404.html  index.html  sitemap.xml
ja/cr/: index.html
ja/search/: search_index.json
ja/trp/: index.html
overrides/: 404.html  main.html
overrides/partials/: meta.html
search/: search_index.json
trp/: index.html
trp/01-tournament-information/: index.html
trp/02-roles-and-responsibilities/: index.html
trp/03-tournament-logistics/: index.html
txt/latest/: en-fab-cr.txt  index.html
(+37 files in other folders)
