[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-mkdocs-plugins"
description = "Custom MkDocs plugins."
version = "0.1"
dependencies = [
    "mkdocs"
]

[project.entry-points."mkdocs.plugins"]
json_export = "custom_plugins.json_export:JSONExportPlugin"

[tool.setuptools]
packages = ["custom_plugins"]